  [Michele Simionato]
  * Optimized the case when the epsilons are not required, i.e. all the
    covariance coefficients are zero in the vulnerability functions
  * Added another test for event based risk (`case_miriam`)
  * Revisited the distribution mechanism and refined the weight of the
    ruptures in the event based calculators to avoid generating slow tasks
  * Added an automatic help for the subcommands of oq-lite and managed
    --version correctly
  * The event based risk calculator now use different seeds for different
    realizations; also, the performance has been substantially improved
  * Improved the .rst reports with data transfer information

  [Matteo Nastasi]
  * Backport of libhdf5 and h5py for ubuntu 'precise' serie

  [Michele Simionato]
  * Introduced filtering on the minimum intensity of the ground shaking
  * Solved the issue of serializing large SES collections, over the HDF5 limit
  * The loss maps and curves XML exporters now export the coordinates
    of the assets, not the coordinates of the closest hazard site
  * Stored the job.ini parameters into a table in the datastore
  * Added a check on the IMTs coming from the risk models
  * Changed the aggregate loss table exporter to export the event tags,
    not the event IDs
  * Fixed a bug with the CSV export of the ground motion fields
  * Fixed a bug with the export of UHS curves with `--exports=xml`
  * Reduced substantially the data transfer and the memory occupation
    for event based calculations with a large number of assets: we
    can run the California exposure with half million assets now
  * Fixed a bug in the SESCollection exporter
  * Changed the asset<->epsilons association: before for a given taxonomy the
    assets were ordered by `asset_ref`, now they are ordered by `id`. This
    has a minor impact on the numbers sensitive to the epsilons, akin to a
    change of seeds
  * Added a test on the ordering of the epsilons