@@ -12,13 +12,13 @@ export DISTUTILS_DEBUG=1
 export DH_VERBOSE=1
 export DH_OPTIONS=-v
 
-TRUSTY_DEP = python-h5py (>= 2.2.1)
+DEFAULT_DEP = python-h5py (>= 2.2.1)
 PRECISE_DEP = python-h5py (= 2.2.1-1build3~precise03)
 
-ifeq ($(shell lsb_release --codename --short),trusty)
-        DEPENDS = -Vdist:Depends="$(TRUSTY_DEP)"
-else
+ifeq ($(shell lsb_release --codename --short),precise)
         DEPENDS = -Vdist:Depends="$(PRECISE_DEP)"
+else
+        DEPENDS = -Vdist:Depends="$(DEFAULT_DEP)"
 endif
 
 %:
